# qt-template

./: .gitignore  CMakeLists.txt  Doxyfile
.github/workflows/: documentation.yml  run-instrumented-tests.yml
app/: CMakeLists.txt  main.cpp
app/applib/: CMakeLists.txt
app/applib/src/: App.cpp  App.h
app/applib/ui/: Main.qml
app/src/: Base.h  Derived.cpp  Derived.h  Foo.cpp  Foo.h  main.cpp
tests/: Base.cpp  Base.h  CMakeLists.txt  main.cpp  tst_mytestcase.cpp
